Fix Margin sizing
Fixing margin sizing of main content so doesn't overlap with menu navbar

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ p {
     display: none;
 }
 
+.main {
+    margin-top: 64px;
+}
+
 .iframe-container {
     position: relative;
     overflow: hidden;
@@ -273,6 +277,10 @@ button {
 }
 
 @media screen and (max-width: 45rem) {
+    /* #top-nav {
+        padding: 10px 10px !important;
+      } */
+
     #top-nav a {
         font-size: 2rem;
     }
@@ -316,9 +324,9 @@ button {
     }
 
     .main{
-        height: 1000px;
-        padding-top: 32px;
-    }
+        /* height: 1000px; */
+        margin-top: 64px; 
+    } 
 }
 
 @media screen and ((max-width: 60rem) and (max-height > max-width)){
